--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </style>
   </head>
   <body>
-    <img src="https://file.garden/YeISN3dZSwaxnYWz/buttholes/Coinslot.png"><br>
+    <img src="/Coinslot.png"><br>
     <img src="https://file.garden/YeISN3dZSwaxnYWz/buttholes/barraconstruction.gif">
   </body>
 </html>
