--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
   </head>
   <body>
     <img src="/Coinslot.png"><br>
-    <img src="https://file.garden/YeISN3dZSwaxnYWz/buttholes/barraconstruction.gif">
+    <img src="/barraconstruction.gif">
   </body>
 </html>
