--- a/spritecomic/index.html
+++ b/spritecomic/index.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/spritecomic/kirbus.png">
+    <link rel="stylesheet" href="/spritecomic/comicstyle.css"> 
+    <title>Retro Game Sprite Comic Hour</title>
+  </head>
+  <body>
+
+<audio id="coin">
+  <source src="https://file.garden/YeISN3dZSwaxnYWz/nsmb_coin.wav" type="audio/wav" />
+</audio>
+
+<div class="main">
+  <img src="/spritecomic/comic-logo.jpg" width=300px onClick="document.getElementById('coin').play(); return false;" style="cursor: pointer;">
+  
+  <p style="font-size: 24px; font-weight: bold; margin-top: 0px; margin-bottom: 15px;">Comics in order:</p>
+  
+  <div class="comiclist">
+  
+  <p>
+  #1: <a href="/spritecomic/page/1/">Kirby's solution.</a><br>
+  #2: <a href="/spritecomic/page/2/">The competition.</a><br>
+  </p>
+  
+  </div>
+  
+  <p>All credit for the sprites go to the incredible contributors at the <a href="https://www.spriters-resource.com/">Spriter's Resource</a>.</p>
+</div>
+  </body>
+</html>
 
