--- a/spritecomic/index.html
+++ b/spritecomic/index.html
@@ -24,18 +24,18 @@
   #1: <a href="/spritecomic/page/0001/">Kirby's solution.</a><br>
   #2: <a href="/spritecomic/page/0002/">The competition.</a><br>
   </p>
+  
+  </div>
+  
+  <p>All credit for the sprites go to the incredible contributors at the <a href="https://www.spriters-resource.com/">Spriter's Resource</a>.</p>
 
-  <img src="/page/spritecomic/button.gif">
+  <img src="/spritecomic/button.gif">
   
   <p style="font-size: 12px;">If you want to use this button on your website, feel free to copy the code below.</p>
   
   <textarea rows="8" cols="40" readonly>
     <a href="https://butthole.observer/spritecomic/"><img src="https://butthole.observer/spritecomic/button.gif" style="-ms-interpolation-mode: nearest-neighbor; image-rendering: crisp-edges; image-rendering: pixelated;"></a>
   </textarea>
-  
-  </div>
-  
-  <p>All credit for the sprites go to the incredible contributors at the <a href="https://www.spriters-resource.com/">Spriter's Resource</a>.</p>
 </div>
   </body>
 </html>
