--- a/spritecomic/index.html
+++ b/spritecomic/index.html
@@ -13,6 +13,10 @@
   <source src="https://file.garden/YeISN3dZSwaxnYWz/nsmb_coin.wav" type="audio/wav" />
 </audio>
 
+<audio id="hai">
+  <source src="https://file.garden/YeISN3dZSwaxnYWz/hai.mp3" type="audio/mp3" />
+</audio>
+
 <div class="main">
   <img src="/spritecomic/comic-logo.jpg" width=300px onClick="document.getElementById('coin').play(); return false;" style="cursor: pointer;">
   
@@ -29,7 +33,7 @@
   
   <p>All credit for the sprites go to the incredible contributors at the <a href="https://www.spriters-resource.com/">Spriter's Resource</a>.</p>
 
-  <img src="/spritecomic/button.gif">
+  <img src="/spritecomic/button.gif" onClick="document.getElementById('hai').play(); return false;" style="cursor: pointer;">
   
   <p style="font-size: 12px;">If you want to use this button on your website, feel free to copy the code below.</p>
   
