--- a/spritecomic/index.html
+++ b/spritecomic/index.html
@@ -13,34 +13,38 @@
   <source src="https://file.garden/YeISN3dZSwaxnYWz/nsmb_coin.wav" type="audio/wav" />
 </audio>
 
-<audio id="hai">
-  <source src="https://file.garden/YeISN3dZSwaxnYWz/hai.mp3" type="audio/mp3" />
-</audio>
-
 <div class="main">
-  <img src="/spritecomic/comic-logo.jpg" width=300px onClick="document.getElementById('coin').play(); return false;" style="cursor: pointer;">
-  
-  <p style="font-size: 24px; font-weight: bold; margin-top: 0px; margin-bottom: 15px;">Comics in order:</p>
+  <img src="comic-logo.jpg" width=300px onClick="document.getElementById('coin').play(); return false;" style="cursor: pointer;">
   
   <div class="comiclist">
   
   <p>
-  #1: <a href="/spritecomic/page/0001/">Kirby's solution.</a><br>
-  #2: <a href="/spritecomic/page/0002/">The competition.</a><br>
+  <a href="/spritecomic/archive/" style="font-size: 24px; font-weight: bold;">Comics Archive</a><br>
+  <a href="/spritecomic/about/">About</a><br>
   </p>
   
-  </div>
+  </div><br>
+  
+  <hr>
+  <p style="font-size: 24px; font-weight: bold; margin-top: 10px; margin-bottom: 10px;">News</p>
+  
+  <div class="comiclist">
+  
+  <p>
+  <span style="font-size: 24px; font-weight: bold;">The First One</span>
+  <span style="font-size: 12px; color: #bbb;">April 22 2025</span><br>
+  Site is up. Developments are being made as we speak. Check frequently for updates.
+  </p>
+  
+  </div><br>
+  
+  <hr>
+  
+  <p><img src="/spritecomic/images/button/monitor.gif"><img src="/spritecomic/images/button/mobile.gif"></p>
+  
+  <hr>
   
   <p>All credit for the sprites go to the incredible contributors at the <a href="https://www.spriters-resource.com/">Spriter's Resource</a>.</p>
-
-  <img src="/spritecomic/button.gif" onClick="document.getElementById('hai').play(); return false;" style="cursor: pointer;">
-  
-  <p style="font-size: 12px;">If you want to use this button on your website, feel free to copy the code below.</p>
-  
-  <textarea rows="8" cols="40" readonly>
-    <a href="https://butthole.observer/spritecomic/"><img src="https://butthole.observer/spritecomic/button.gif" style="-ms-interpolation-mode: nearest-neighbor; image-rendering: crisp-edges; image-rendering: pixelated;"></a>
-  </textarea>
 </div>
   </body>
 </html>
-
