--- a/spritecomic/about/index.html
+++ b/spritecomic/about/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/spritecomic/kirbus.png">
     <link rel="stylesheet" href="/spritecomic/comicstyle.css"> 
-    <title>Retro Game Sprite Comic Hour</title>
+    <title>About Retro Game Sprite Comic Hour</title>
   </head>
   <body>
 
